@@ -1,5 +1,12 @@
 2019-07-10  Richard Biener  <rguenther@suse.de>
 
+	PR tree-optimization/91126
+	* tree-ssa-sccvn.c (n_walk_cb_data::push_partial_def): Adjust
+	native encoding offset for BYTES_BIG_ENDIAN.
+	(vn_reference_lookup_3): Likewise.
+
+2019-07-10  Richard Biener  <rguenther@suse.de>
+
 	* tree-ssa-sccvn.c (vn_reference_lookup_3): Look at valueized
 	LHS whenever possible.
 
